--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ bcrypt==3.1.6
 certifi==2018.11.29
 cffi==1.12.2
 chardet==3.0.4
-Django==1.10
+django>=1.11.19
 idna==2.8
 pycparser==2.19
 requests==2.21.0
 six==1.12.0
-urllib3==1.24.1
+urllib3>=1.24.1
